syntax = "proto3";

package firehose_v2;
option go_package = "github.com/streamingfast/firehose-solana/firehose_v2";

// === Basic Block Response ===
message Response {
  uint64 block_num = 1;
  string block_hash = 2;
  string status = 3;
}

message Block {
  uint64 block_num = 1;
  string block_hash = 2;
  string parent = 3;
}

message Header {
  int32 version = 1;
  string network = 2;
  string source = 3;
}

// === Streamer Service ===
service Streamer {
  rpc GetResponse (Block) returns (Response);
}
